2.4.0:
- Fixed: crash on boot caused by missing access to preferences

2.3.0:
- New: Jost* typeface
- New: animated splash screen in settings
- New: immersive fullscreen experience in settings
- New: medium size option
- New: start with boot
- New: wallpaper description
- New: optimized for Android 11 and support down to Android 6
- Improved: more information in settings
- Improved: internal cleanup
- Fixed: color changes not being applied to launcher

2.2.0:
- Improved: app icon
- Improved: internal cleanup

2.1.2:
- Improved: settings update
- Fixed: theme selection

2.1.1:
- Improved: description and appearance
- Fixed: interface style