@@ -45,8 +45,6 @@
   <string name="info_changelog">Changelog</string>
   <string name="info_changelog_description">What\'s new?</string>
   <string name="info_developer">Developer</string>
-  <string name="info_material_components_built_with">Built with</string>
-  <string name="info_material_components">Material Components</string>
 
   <array name="changelog_highlights" translatable="false">
     <item>New:</item>
