@@ -14,7 +14,7 @@
   ~ Copyright (c) 2021 by Patrick Zedler
   -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
   <style name="Theme.Doodle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <item name="colorPrimary">@color/background</item>
@@ -37,6 +37,12 @@
     <item name="android:colorEdgeEffect">@color/highlight</item>
 
     <item name="android:fontFamily">@font/jost_book</item>
+  </style>
+
+  <style name="Theme.Doodle.Splash" parent="Theme.Doodle">
+    <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+    <item name="android:navigationBarColor">@color/background</item>
+    <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
   </style>
 
   <style name="Theme.Doodle.BottomSheetDialog" parent="Theme.MaterialComponents.BottomSheetDialog">
